test/readonly/fail/array_length05.v3
//@execute 0 = 3
var x: Array<int> = [0, 1, 2];
def main(a: int) -> int {
	return array.length(x);
}
